# PCHSystem

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  docker-compose.override.yml  docker-compose.yml
Backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  openapi.json  pyproject.toml
Backend/alembic/: env.py
Backend/alembic/versions/: 0001_users_players.py  0002_auth_tokens_jwt_revocations.py  0003_auth_tokens_revoked_at.py  0004_sheets_schema.py  0005_sheets_collaboration.py  0006_notifications.py  0007_sheet_row_contributors.py  0008_contributor_qty.py  0009_sheet_rows_registry_id.py  0009_sheets_lifecycle.py  0010_sheet_rows_registry_id.py  0011_players_last_sheet_id.py  0012_sheet_rows_hierarchy.py  0013_qty_per_unit_float.py  0014_sheet_managers.py  0014_web_accounts_bind.py  0015_web_account_display_name.py  (+1 more)
Backend/app/: main.py
Backend/tests/: conftest.py  test_archive_publisher.py  test_archive_service.py  test_auth_api.py  test_auth_service.py  test_auth_token_repo.py  test_bind_token_repo.py  test_config.py  test_db.py  test_health.py  test_identity.py  test_jwt.py  test_last_sheet.py  test_markdown_render.py  test_notifications.py  test_openapi_freeze.py  test_parsing_api.py  test_parsing_batch_api.py  test_parsing_unit.py  test_player_repo.py  test_players_api.py  test_qty.py  test_security.py  test_security_deps.py  test_sheet_managers_api.py  test_sheet_repo.py  test_sheet_row_order.py  test_sheets_api.py  test_sheets_from_items.py  test_sheets_service_write.py  test_web_account_repo.py
Docs/: guied.md  (+2 more)
(+231 files in other folders)
