[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pchsystem-backend"
version = "0.6.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "psycopg2-binary>=2.9",
  "alembic>=1.13",
  "pyjwt>=2.8",
  "pydantic-settings>=2.1",
  "httpx>=0.27",
  "litemapy>=0.11.0b0",  # PyPI 仅有 pre-release（a/b）；显式标注 b0 让 pip 接受
  "nbtlib>=2.0.4",  # litemapy 已传递依赖；.nbt(structure) 解析直接使用（已实测解析 Create 蓝图）
  "python-multipart>=0.0.9",
  "matplotlib>=3.8",  # 归档贡献占比饼图（Agg 后端，免系统 GUI 包）
  "bcrypt>=4.1",  # 密码哈希（Web 账号绑定功能）
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "anyio>=4"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
